update moment,  query 7 days but not done yet

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
     <script src="assets/js/demo/chart-area-demo.js"></script>
     <script src="assets/js/demo/chart-pie-demo.js"></script>
 
+    <script src="anime.min.js"></script>
+    
     <title>Dashboard</title>
   </head>
   <body id="page-top">
