update before use each parts

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     
     <title>Dashboard</title>
   </head>
-  <body id="page-top">
+  <body id="page-top" class="sidebar-toggled">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       
